--- a/index.html
+++ b/index.html
@@ -2,4 +2,25 @@
 <html>
 <head>
 <style>
-	
+.Art {
+		border: 5px pink;
+		margin-left: 100px;
+		background-color: gold;
+		text-align: center;
+		initial-letter-align: center;
+	}
+</style>
+</head>
+<body> 
+<h1 style="color: grey;">SOPHMORE OIL WORKS by me Ariana Sparks</h1>
+<div class="Art"> The works that will be displayed are art peices that were made in my 
+	oil painting class i took this semester. Oil painting is a new medium to me
+	and this would help keep track of what i've done in the class. 
+The specific peices posted are the ones i enjoyed working on the most.</div>
+<div class="column">
+	<img src="starlight">
+	<p> Ariana Sparks/Starlight/Oil canvas painting/11 x 14/2024</p>
+	<img src="teakettle">
+	<p> Ariana Sparks/Tea Kettle/Oil canvas painting/9 x 12/2024</p>
+	<img src="summerpot">
+	<p>Ariana Sparks/Summer Pot/OIl canvas painting/11 x 14/2024</p>	
