--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 	oil painting class i took this semester. Oil painting is a new medium to me
 	and this would help keep track of what i've done in the class. 
 The specific peices posted are the ones i enjoyed working on the most.</div>
-<div class="column">
-	<img src="starlight">
+<div class="Art">
+	<img src="starlight.jpg">
 	<p> Ariana Sparks/Starlight/Oil canvas painting/11 x 14/2024</p>
-	<img src="teakettle">
+	<img src="teakettle.jpg">
 	<p> Ariana Sparks/Tea Kettle/Oil canvas painting/9 x 12/2024</p>
-	<img src="summerpot">
+	<img src="summerpot.jpg">
 	<p>Ariana Sparks/Summer Pot/OIl canvas painting/11 x 14/2024</p>	
+</div>
+</body>
+</html>
