--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ The specific peices posted are the ones i enjoyed working on the most.</div>
 	<p> Ariana Sparks/Starlight/Oil canvas painting/11 x 14/2024</p>
 	<img src="teakettle.jpg" width="300" height="500">
 	<p> Ariana Sparks/Tea Kettle/Oil canvas painting/9 x 12/2024</p>
-	<img src="summerpot.jpg" width="300" height="600">
+	<img src="summerpot.jpg" width="400" height="500">
 	<p>Ariana Sparks/Summer Pot/OIl canvas painting/11 x 14/2024</p>
-	<img src="map.jpg">
+	<img src="map.jpeg">
 </div>
 </body>
 </html>
