--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ The specific peices posted are the ones i enjoyed working on the most.</div>
 	<img src="teakettle.jpg" width="300" height="500">
 	<p> Ariana Sparks/Tea Kettle/Oil canvas painting/9 x 12/2024</p>
 	<img src="summerpot.jpg" width="400" height="500">
-	<p>Ariana Sparks/Summer Pot/OIl canvas painting/11 x 14/2024</p>
-	<img src="map.jpeg">
+	<p>Ariana Sparks/Summer Pot/Oil canvas painting/11 x 14/2024</p>
+	<img src="img_0883.png">
 </div>
 </body>
 </html>
