--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ The specific peices posted are the ones i enjoyed working on the most.</div>
 	<p> Ariana Sparks/Tea Kettle/Oil canvas painting/9 x 12/2024</p>
 	<img src="summerpot.jpg" width="400" height="500">
 	<p>Ariana Sparks/Summer Pot/Oil canvas painting/11 x 14/2024</p>
-	<img src="img_0883.png">
+	<img src="mapout.png">
 </div>
 </body>
 </html>
