--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </head>
 <body> 
 <h1 style="color: grey;">SOPHMORE OIL WORKS by me Ariana Sparks</h1>
-<div class="Art"> The works that will be displayed are art peices that were made in my 
-	oil painting class i took this semester. Oil painting is a new medium to me
-	and this would help keep track of what i've done in the class. 
-The specific peices posted are the ones i enjoyed working on the most.</div>
+<div class="Art"> The works that will be displayed are pieces created during my oil painting class this semester. 
+	Oil painting is a new medium for me, and this exhibition serves as both a showcase of my progress and a personal reflection of my learning experience. 
+	Throughout the semester, I explored various techniques, learned to manipulate textures, and embraced the richness of color that oil paint offers. 
+	This collection of pieces not only marks my journey into the world of oil painting but also captures my development as an artist.
+	The specific pieces presented are the ones I enjoyed working on the most, as they reflect moments of experimentation, discovery, and growth.</div>
 <div class="Art">
 	<img src="starlight.jpg" width="300" height="500">
 	<p> Ariana Sparks/Starlight/Oil canvas painting/11 x 14/2024</p>
